--- a/user_gudang/request_stock_detail_terkirim.html
+++ b/user_gudang/request_stock_detail_terkirim.html
@@ -320,7 +320,10 @@ License: You must have a valid license purchased only from themeforest(the above
 										</div>
 										<div class="kt-portlet__body">
                                             <div class="row" style="margin-bottom: 50px;">
-                                                <h5 class="col-12 color-main-dark" name="kode_request" style="margin-bottom: 20px;">#123456</h5>
+												<div class="col-12 kt-margin-b-20">
+	                                                <h5 class="color-main-dark" name="kode_request">#123456</h5>
+	                                                <span class="kt-font-bold"name="studio_request">Studio Cabang Dg Tata</span>
+												</div>
 												<div class="col-4" style="padding-right:0px;">
 	                                                <span class="kt-font-bold">Date Request : <span name="date_request">15 November 2019</span></span>
 												</div>
