--- a/user_gudang/profile_kehadiran.html
+++ b/user_gudang/profile_kehadiran.html
@@ -422,13 +422,14 @@ License: You must have a valid license purchased only from themeforest(the above
                                                     <label for="example-text-input" class="col-3 col-form-label">Tanggal</label>
                                                     <div class="col-9">
 														<div class="input-group date">
-	                                                        <input type="text" class="form-control kt_multidatepicker" placeholder="Tanggal" name="dayoff_tanggal">
+	                                                        <input type="text" class="form-control kt-multidatepicker" placeholder="Tanggal" name="dayoff_tanggal">
 															<div class="input-group-append">
 																<span class="input-group-text">
 																	<i class="la la-calendar-check-o"></i>
 																</span>
 															</div>
 														</div>
+														<span class="form-text text-muted kt-hidden" style="margin:0px;"></span>
                                                     </div>
                                                 </div>
                                                 <div class="form-group row">
