--- a/user_therapist/profile_kehadiran.html
+++ b/user_therapist/profile_kehadiran.html
@@ -425,6 +425,7 @@ License: You must have a valid license purchased only from themeforest(the above
 																</span>
 															</div>
 														</div>
+														<span class="form-text text-muted kt-hidden" style="margin:0px;"></span>
                                                     </div>
                                                 </div>
                                                 <div class="form-group row">
